test/tests/stages/18_structures/valid/no_structure_parameters/size_and_offset_calculations/member_comparisons.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[146]:
  struct
  identifier(three_ints)
  {
  int
  identifier(a)
  ;
  int
  identifier(b)
  ;
  int
  identifier(c)
  ;
  }
  ;
  void
  *
  identifier(calloc)
  (
  unsigned
  long
  identifier(nmem)
  ,
  unsigned
  long
  identifier(size)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(three_ints)
  *
  identifier(my_struct)
  =
  identifier(calloc)
  (
  const int(1)
  ,
  sizeof
  (
  struct
  identifier(three_ints)
  )
  )
  ;
  if
  (
  (
  void
  *
  )
  identifier(my_struct)
  !=
  &
  identifier(my_struct)
  ->
  identifier(a)
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  !
  (
  (
  int
  *
  )
  identifier(my_struct)
  <=
  &
  identifier(my_struct)
  ->
  identifier(a)
  )
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  &
  identifier(my_struct)
  ->
  identifier(c)
  <=
  &
  identifier(my_struct)
  ->
  identifier(a)
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  &
  identifier(my_struct)
  ->
  identifier(b)
  >
  &
  identifier(my_struct)
  ->
  identifier(c)
  )
  {
  return
  const int(4)
  ;
  }
  if
  (
  !
  (
  &
  identifier(my_struct)
  ->
  identifier(b)
  >
  &
  identifier(my_struct)
  ->
  identifier(a)
  )
  )
  {
  return
  const int(5)
  ;
  }
  return
  const int(0)
  ;
  }
