test/tests/stages/18_structures/invalid_struct_tags/extra_credit/sizeof_undeclared_union.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  sizeof
  (
  union
  identifier(c)
  )
  ;
  }
  union
  identifier(c)
  {
  int
  identifier(x)
  ;
  }
  ;
